<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dummy Launcher</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_about">Dummy Launcher</string>

	<string name="error_launch_app">Unable to launch this App</string>
   
	<string name="launcher_welcome">Welcome to Android</string>
	<string name="launcher_search">Search on Google</string>
	<string name="launcher_common">Common Apps</string>
	<string name="launcher_google_apps">Google Apps</string>
	<string name="launcher_all_apps">All your Apps</string>
	<string name="launcher_comm">Communication</string>
	<string name="launcher_games">Games</string>
	
	<string name="applauncher_all">All your Apps</string>
	
    <string name="xda">Dummy Launcher at XDA</string>
    <string name="xda_summary">Give Feedback and report bugs at the official topic.</string>
    <string name="github">Open Source at GitHub</string>
    <string name="github_summary">You can code a new feature or translate the app.</string>
    <string name="paypal">Donations via Paypal</string>
    <string name="paypal_summary">PayPal donations do not grant any updates or improvements, they just support the work of the developer. App will remain free without donating.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_defaults_title">Clear App defaults</string>
    <string name="settings_defaults_summary">Reset the HOME button to go back to your old launcher.</string>
</resources>