<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#CC0000" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#CC0000"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:text="@string/launcher_welcome"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#F0F0F0"
                    android:textSize="50sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#335599"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/bSearch"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:onClick="onGoogle"
                    android:text="Search on Google"
                    android:textColor="#F0F0F0"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#FF8800"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/launcher_common"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#F0F0F0"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp" >

                    <ImageButton
                        android:id="@+id/bPhone"
                        android:layout_width="60dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:onClick="onPhone"
                        android:src="@drawable/ic_launcher_phone" />

                    <ImageButton
                        android:id="@+id/bContacts"
                        android:layout_width="60dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:onClick="onContacts"
                        android:src="@drawable/ic_launcher_contacts" />

                    <ImageButton
                        android:id="@+id/bBrowser"
                        android:layout_width="60dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:onClick="onBrowser" />

                    <ImageButton
                        android:id="@+id/bCalendar"
                        android:layout_width="60dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:onClick="onCalendar" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#FF8800"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/launcher_google_apps"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#F0F0F0"
                    android:textSize="30sp" />

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" >

                        <ImageButton
                            android:id="@+id/bGmail"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="onMail" />
                        
                        <ImageButton
                            android:id="@+id/bPlay"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="onPlay" />

                        <ImageButton
                            android:id="@+id/bKeep"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="onKeep" />

                        <ImageButton
                            android:id="@+id/bMaps"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="onMaps" />

                        <ImageButton
                            android:id="@+id/bDrive"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="onDrive"
                            android:src="@drawable/ic_launcher_drive" />

                        <ImageButton
                            android:id="@+id/bCurrents"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="onCurrents" />

                    </LinearLayout>

                </HorizontalScrollView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#FF8800"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/launcher_comm"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#F0F0F0"
                    android:textSize="30sp" />

                <HorizontalScrollView
                    android:id="@+id/HorizontalScrollView01"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" >

                        <ImageButton
                            android:id="@+id/bWhatsApp"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="onWhatsApp" />

                        <ImageButton
                            android:id="@+id/bLine"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="onLine" />
                        
                        <ImageButton
                            android:id="@+id/bViber"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="onViber" />

                        <ImageButton
                            android:id="@+id/bSkype"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="onSkype" />

                        <ImageButton
                            android:id="@+id/bFacebook"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="onFacebook" />

                        <ImageButton
                            android:id="@+id/bTwitter"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="onTwitter" />

                        <ImageButton
                            android:id="@+id/bInstagram"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="onInstagram" />
                        
                        <ImageButton
                            android:id="@+id/bTuenti"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="onTuenti" />
                        
                        <ImageButton
                            android:id="@+id/bTapatalk"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="onTapatalk" />
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#FF8800"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/launcher_games"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#F0F0F0"
                    android:textSize="30sp" />

                <HorizontalScrollView
                    android:id="@+id/HorizontalScrollView02"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" >

                        <ImageButton
                            android:id="@+id/ImageButton10"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="onMail" />

                        <ImageButton
                            android:id="@+id/ImageButton12"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="onPlay" />

                        <ImageButton
                            android:id="@+id/ImageButton07"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="onKeep" />

                        <ImageButton
                            android:id="@+id/ImageButton11"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="onMaps" />

                        <ImageButton
                            android:id="@+id/ImageButton09"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="onDrive"
                            android:src="@drawable/ic_launcher_drive" />

                        <ImageButton
                            android:id="@+id/ImageButton08"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="onCurrents" />
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#FF8800"
                android:orientation="vertical" >
                
                <Button
                    android:id="@+id/bAll"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:onClick="onApps"
                    android:text="@string/launcher_all_apps"
                    android:textColor="#F0F0F0"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>